[gd_scene load_steps=25 format=3 uid="uid://bj0di6rfihwgj"]

[ext_resource type="Script" path="res://addons/motion-director/gui/components/settings/settings_interface.gd" id="1_jncbx"]
[ext_resource type="Texture2D" uid="uid://b4jrmevk1an3d" path="res://addons/motion-director/gui/icons/tools/add_icon.png" id="2_gmion"]
[ext_resource type="Texture2D" uid="uid://dvers8l8w2kul" path="res://addons/motion-director/gui/icons/tools/select_up_icon.png" id="3_peyhi"]
[ext_resource type="Texture2D" uid="uid://dicufln787rqa" path="res://addons/motion-director/gui/icons/tools/select_down_icon.png" id="4_7mljt"]
[ext_resource type="Texture2D" uid="uid://cx088m8x6loav" path="res://addons/motion-director/gui/icons/tools/delete_icon.png" id="5_n1djr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_42iok"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vhixn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_omip0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gdcuk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_71xio"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hpq26"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_68trh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0ioun"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x610k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lrmqm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_57si0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ownrw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_htol7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_arh43"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m5e26"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x622e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ognws"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vmynm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m5wlv"]

[node name="SettingsInterface" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jncbx")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Settings
"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 180)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_bottom = 30

[node name="SettingsOptionsList" type="ItemList" parent="HBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_42iok")
item_count = 4
item_0/text = "General"
item_1/text = "Motions"
item_2/text = "Experimental"
item_3/text = "About"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="GeneralInterface" type="MarginContainer" parent="HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MotionInterface" type="MarginContainer" parent="HBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/MotionInterface"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="MotionFoldersLabel" type="Label" parent="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Motion Folders"

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "DON'T USE THESE FOLDERS FOR ANYTHING BUT MOTION DIRECTOR FILES!!!"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="MotionFoldersList" type="ItemList" parent="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 110)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_vhixn")

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ToolsPanel" type="PanelContainer" parent="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer/VBoxContainer/ToolsPanel"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="MotionFoldersAddButton" type="Button" parent="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer/VBoxContainer/ToolsPanel/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_omip0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_gdcuk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_71xio")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_hpq26")
theme_override_styles/focus = SubResource("StyleBoxEmpty_68trh")
icon = ExtResource("2_gmion")

[node name="MotionFoldersSelectUpButton" type="Button" parent="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer/VBoxContainer/ToolsPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_0ioun")
theme_override_styles/hover = SubResource("StyleBoxEmpty_x610k")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lrmqm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_57si0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ownrw")
icon = ExtResource("3_peyhi")

[node name="MotionFoldersSelectDownButton" type="Button" parent="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer/VBoxContainer/ToolsPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_0ioun")
theme_override_styles/hover = SubResource("StyleBoxEmpty_htol7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lrmqm")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_57si0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ownrw")
icon = ExtResource("4_7mljt")

[node name="MotionFoldersDeleteButton" type="Button" parent="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer/VBoxContainer/ToolsPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_omip0")
theme_override_styles/hover = SubResource("StyleBoxEmpty_arh43")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m5e26")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_x622e")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ognws")
icon = ExtResource("5_n1djr")

[node name="ExperimentalInterface" type="MarginContainer" parent="HBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/ExperimentalInterface"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/ExperimentalInterface/VBoxContainer"]
layout_mode = 2

[node name="LivePreviewButton" type="CheckButton" parent="HBoxContainer/MarginContainer/ExperimentalInterface/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vmynm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_m5wlv")
text = "LivePreview"

[node name="WarningLabel" type="Label" parent="HBoxContainer/MarginContainer/ExperimentalInterface/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "NOT IMPLEMENTED YET!"

[node name="AboutInterface" type="MarginContainer" parent="HBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/AboutInterface"]
layout_mode = 2

[node name="AboutLabel" type="Label" parent="HBoxContainer/MarginContainer/AboutInterface/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Motion Director
An easy to work with, modular, extendable framework for animating all the UI and other things in your project
Jayfalls
v0.6.10"
horizontal_alignment = 1

[node name="AboutLinkButton" type="LinkButton" parent="HBoxContainer/MarginContainer/AboutInterface/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Github"
uri = "https://github.com/jayfalls/gd-motion-director"

[node name="FileDialog" type="FileDialog" parent="."]
initial_position = 2
title = "Open a Directory"
size = Vector2i(600, 400)
popup_window = true
ok_button_text = "Select Current Folder"
file_mode = 2

[connection signal="item_clicked" from="HBoxContainer/VBoxContainer/MarginContainer/SettingsOptionsList" to="." method="_on_settings_options_list_item_clicked"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer/VBoxContainer/ToolsPanel/HBoxContainer/MotionFoldersAddButton" to="." method="_on_motion_folders_add_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer/VBoxContainer/ToolsPanel/HBoxContainer/MotionFoldersSelectUpButton" to="." method="_on_motion_folders_select_up_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer/VBoxContainer/ToolsPanel/HBoxContainer/MotionFoldersSelectDownButton" to="." method="_on_motion_folders_select_down_button_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/MotionInterface/HBoxContainer/VBoxContainer/VBoxContainer/ToolsPanel/HBoxContainer/MotionFoldersDeleteButton" to="." method="_on_motion_folders_delete_button_pressed"]
